--- a/assets/main.css
+++ b/assets/main.css
@@ -754,7 +754,7 @@ span.minus, span.minus1{
 .home-order{
     width: 100%;
     height: 100%;
-    background: url("/img/background-order2.jpg") no-repeat fixed;
+    background: url("img/background-order2.jpg") no-repeat fixed;
 }
 
 .inner{
@@ -950,7 +950,7 @@ span.minus, span.minus1{
 .footer-background{
     width: 100%;
     height: 100%;
-    background: url("/img/footer-bg.png");
+    background: url("img/footer-bg.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
